upgrade footer and product

--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
             </div>
           </div>
         </div>
-        <div class="products">
-          <div class="best-product">
+        <div class="product">
+          <div class="product__group">
             <div class="product__header">
               <span class="title">Best Sellers</span>
               <div class="product__clicker">
@@ -338,7 +338,7 @@
               </div>
             </div>
           </div>
-          <div class="featured-product">
+          <div class="product__group">
               <div class="product__header">
                 <span class="title featured-product__title">Featured Products</span>
                 <div class="product__clicker">
@@ -505,103 +505,103 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="footer__wrapper">
+    <div class="footer__top">
         <div class="container">
-            <div class="footer__section">
-                <div class="footer__block">
-                    <span class="title footer__title">Contact Us</span>
-                    <ul class="footer__list">
-                      <li class="footer__list-item">
-                        <a class="footer__list-item-link nav-link" href="#">
-                          <span class="footer__list-item-link-nav"></span>
-                          <span class="footer__list-item-link-text">49 Archdale, 28 Charleston</span>
+            <div class="footer__top-section">
+                <div class="footer__top-block">
+                    <span class="title footer__top-title">Contact Us</span>
+                    <ul class="footer__top-list ">
+                      <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">
+                          <span class="img-nav"></span>
+                          <span class="footer__top-link-text">49 Archdale, 28 Charleston</span>
                         </a>
                       </li>
-                      <li class="footer__list-item">
-                        <a class="footer__list-item-link phone-link" href="tel:+7771001234">
-                          <span class="footer__list-item-link-phone"></span>
-                          <span class="footer__list-item-link-text">Call Us +777 (100) 1234</span>
+                      <li class="footer__top-item">
+                        <a class="footer__top-link" href="tel:+7771001234">
+                          <span class="img-phone"></span>
+                          <span class="footer__top-link-text">Call Us +777 (100) 1234</span>
                         </a>
                       </li>
-                      <li class="footer__list-item">
-                        <a class="footer__list-item-link email-link" href="mailto:mail@example.com">
-                          <span class="footer__list-item-link-email"></span>
-                          <span class="footer__list-item-link-text">mail@example.com</span>
+                      <li class="footer__top-item">
+                        <a class="footer__top-link" href="mailto:mail@example.com">
+                          <span class="img-email"></span>
+                          <span class="footer__top-link-text">mail@example.com</span>
                         </a>
                       </li>
                     </ul>
                   </div>
-                  <div class="footer__block">
-                      <span class="title footer__title">Inforamtion</span>
-                      <ul class="footer__list">
-                        <li class="footer__list-item">
-                          <a class="footer__list-item-link" href="#">
-                            <span class="footer__list-item-link-text">About us</span>
+                  <div class="footer__top-block">
+                      <span class="title footer__top-title">Inforamtion</span>
+                      <ul class="footer__top-list">
+                        <li class="footer__top-item">
+                          <a class="footer__top-link" href="#">
+                            <span class="footer__top-link-text">About us</span>
                           </a>
                         </li>
-                        <li class="footer__list-item">
-                          <a class="footer__list-item-link" href="#">
-                            <span class="footer__list-item-link-text">Privacy Policy</span>
+                        <li class="footer__top-item">
+                          <a class="footer__top-link" href="#">
+                            <span class="footer__top-link-text">Privacy Policy</span>
                           </a>
                         </li>
-                        <li class="footer__list-item">
-                          <a class="footer__list-item-link" href="#">
-                            <span class="footer__list-item-link-text">Terms & Conditions</span>
+                        <li class="footer__top-item">
+                          <a class="footer__top-link" href="#">
+                            <span class="footer__top-link-text">Terms & Conditions</span>
                           </a>
                         </li>
-                        <li class="footer__list-item">
-                            <a class="footer__list-item-link" href="#">
-                              <span class="footer__list-item-link-text">Secure payment</span>
+                        <li class="footer__top-item">
+                            <a class="footer__top-link" href="#">
+                              <span class="footer__top-link-text">Secure payment</span>
                             </a>
                           </li>
                       </ul>
                     </div>
-                    <div class="footer__block">
-                        <span class="title footer__title">Costumer Service</span>
-                        <ul class="footer__list">
-                            <li class="footer__list-item">
-                                <a class="footer__list-item-link" href="#">
-                                  <span class="footer__list-item-link-text">Contact Us</span>
+                    <div class="footer__top-block">
+                        <span class="title footer__top-title">Costumer Service</span>
+                        <ul class="footer__top-list">
+                            <li class="footer__top-item">
+                                <a class="footer__top-link" href="#">
+                                  <span class="footer__top-link-text">Contact Us</span>
                                 </a>
                               </li>
-                              <li class="footer__list-item">
-                                <a class="footer__list-item-link" href="#">
-                                  <span class="footer__list-item-link-text">Return</span>
+                              <li class="footer__top-item">
+                                <a class="footer__top-link" href="#">
+                                  <span class="footer__top-link-text">Return</span>
                                 </a>
                               </li>
-                              <li class="footer__list-item">
-                                <a class="footer__list-item-link" href="#">
-                                  <span class="footer__list-item-link-text">FAQ</span>
+                              <li class="footer__top-item">
+                                <a class="footer__top-link" href="#">
+                                  <span class="footer__top-link-text">FAQ</span>
                                 </a>
                               </li>
-                              <li class="footer__list-item">
-                                  <a class="footer__list-item-link" href="#">
-                                    <span class="footer__list-item-link-text">Site Map</span>
+                              <li class="footer__top-item">
+                                  <a class="footer__top-link" href="#">
+                                    <span class="footer__top-link-text">Site Map</span>
                                   </a>
                               </li>
                         </ul>
                       </div>
-                      <div class="footer__block">
-                          <span class="title footer__title">My Account</span>
-                          <ul class="footer__list">
-                              <li class="footer__list-item">
-                              <a class="footer__list-item-link" href="#">
-                                <span class="footer__list-item-link-text">My Account</span>
+                      <div class="footer__top-block">
+                          <span class="title footer__top-title">My Account</span>
+                          <ul class="footer__top-list">
+                              <li class="footer__top-item">
+                              <a class="footer__top-link" href="#">
+                                <span class="footer__top-link-text">My Account</span>
                               </a>
                             </li>
-                            <li class="footer__list-item">
-                              <a class="footer__list-item-link" href="#">
-                                <span class="footer__list-item-link-text">Order History</span>
+                            <li class="footer__top-item">
+                              <a class="footer__top-link" href="#">
+                                <span class="footer__top-link-text">Order History</span>
                               </a>
                             </li>
-                            <li class="footer__list-item">
-                              <a class="footer__list-item-link" href="#">
-                                <span class="footer__list-item-link-text">Wish List</span>
+                            <li class="footer__top-item">
+                              <a class="footer__top-link" href="#">
+                                <span class="footer__top-link-text">Wish List</span>
                               </a>
                             </li>
-                            <li class="footer__list-item">
-                                <a class="footer__list-item-link" href="#">
-                                  <span class="footer__list-item-link-text">Newsletter</span>
+                            <li class="footer__top-item">
+                                <a class="footer__top-link" href="#">
+                                  <span class="footer__top-link-text">Newsletter</span>
                                 </a>
                             </li>
                           </ul>
@@ -609,21 +609,23 @@
             </div>
     </div>
       </div>
-      <div class="container">
-          <div class="footer__bottom">
-                <span class="footer__bottom-copyright">&copy; Breeze Store Theme, 2012</span>
-                  <ul class="footer__bottom-list">
-                    <li class="footer__bottom-list-item">
-                      <a href="#" class="footer__bottom-list-item-link footer__bottom-list-item-link--fb"></a>
-                    </li>
-                    <li class="footer__bottom-list-item">
-                      <a href="#" class="footer__bottom-list-item-link footer__bottom-list-item-link--tw"></a>
-                    </li>
-                    <li class="footer__bottom-list-item">
-                      <a href="#" class="footer__bottom-list-item-link footer__bottom-list-item-link--google"></a>
-                    </li>
-                  </ul>
+      <div class="footer__bottom">
+          <div class="container">
+            <div class="footer_bottom-section">
+                <span class="img-copyright">&copy; Breeze Store Theme, 2012</span>
+                <ul class="social-list">
+                  <li class="social-list__item">
+                    <a href="#" class="social-list__link img-fb"></a>
+                  </li>
+                  <li class="social-list__item">
+                    <a href="#" class="social-list__link img-tw"></a>
+                  </li>
+                  <li class="social-list__item">
+                    <a href="#" class="social-list__link img-google"></a>
+                  </li>
+                </ul>
             </div>
+          </div>
       </div>
   </footer>
   <script src="js/slider.js"></script>
