upp product class

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <a href="#" class="product__control product__control_next slider__control_show" role="button"></a>
               </div>
             </div>
-            <div class="product__items">
+            <div class="product__section">
               <div class="product__item label-sale">
                 <a href="#">
                     <div class="product__photo">
@@ -346,7 +346,7 @@
                   <a href="#" class="product__control product__control_next slider__control_show" role="button"></a>
                 </div>
               </div>
-              <div class="product__items">
+              <div class="product__section">
                 <div class="product__item label-sale">
                   <a href="#">
                       <div class="product__photo">
